# engProject

./: .gitignore  README.md
build-cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/.cmake/api/v1/reply/: cache-v2-a627dc520f8bd978bec4.json  cmakeFiles-v1-781337d75431b15954b3.json  codemodel-v2-ead9cf0d9f506d2eceb5.json  index-2023-08-17T16-22-18-0034.json  target-engine_pr-Debug-a51f5d9b06e1048d0222.json  target-glad-Debug-3146dff448e286356c80.json  target-imgui-Debug-8b52f592ead2c2d3397b.json  target-lodepng-Debug-1d9014c3101bece818c9.json
build-cmake/imgui/: cmake_install.cmake
materials/: cottage_triag.mtl  untitled.mtl
src/: .gitignore  CMakeLists.txt  CMakeLists_old.txt  animation.hxx  engine.cpp  engine.hxx  main.cpp  myimgui.h  structs.hxx
src/foundation/glad/: glad.c  glad.h
src/foundation/glm/detail/: type_quat.hpp
src/graphic/: graphic_draw.cpp  graphic_draw.h  graphicinit.cpp  graphicinit.hxx
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
src/objects/: basicCamera.cpp  basicCamera.h  basicObject.cpp  basicObject.h  basicPerson.cpp  basicPerson.h  structs.hxx
